--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,5 @@
 
     <groupId>RobotWar</groupId>
     <artifactId>RobotWar</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
-
+    <version>0.1</version>
 </project>
