--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>Shared</module>
     </modules>
     <properties>
+        <location>../BUILD</location>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
