Ajout d’un module pour les plugins obligatoires.

--- a/OptionnalPlugins/pom.xml
+++ b/OptionnalPlugins/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>Shared</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.parent.groupId}</groupId>
+            <artifactId>MandatoryPlugins</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
