--- a/Plugins/MandatoryPlugins/pom.xml
+++ b/Plugins/MandatoryPlugins/pom.xml
@@ -26,7 +26,7 @@
                     <artifactId>maven-assembly-plugin</artifactId>
                     <version>3.1.0</version>
                     <configuration>
-                        <outputDirectory>${project.build.directory}</outputDirectory>
+                        <outputDirectory>target</outputDirectory>
                         <descriptorRefs>
                             <descriptorRef>jar-with-dependencies</descriptorRef>
                         </descriptorRefs>
